--- a/style.css
+++ b/style.css
@@ -1,1 +1,65 @@
+*{
+    margin : 0px;
+    padding : 0px;
+}
+body{
+    background-color: #a4c3b2;
+    text-align : center;
+}
+.container{
+    height : 70vh;
+    display:flex;
+    flex-wrap : wrap;
+    justify-content: center;
+    align-items: center;
+}
+.game{
+    height : 60vmin;
+    width : 60vmin;
+    display:flex;
+    flex-wrap : wrap;
+    justify-content: center;
+    align-items: center;
+    gap : 1.5vmin;
+}
+.box{
+    height : 18vmin;
+    width : 18vmin;
+    border-radius : 1rem;
+    border: none;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.4);
+    font-size : 8vmin;
+    color: #3d405b;
+    background-color: #f2cc8f;
+    
+}
+#reset-btn{
+    padding: 1rem;
+    font-size: 1.25rem;
+    border-radius : 1rem;
+    background-color: #004e64;
+    color: aliceblue;
+}
+#new-btn{
+    padding: 1rem;
+    font-size: 1.25rem;
+    border-radius : 1rem;
+    background-color: #004e64;
+    color: aliceblue;
 
+}
+#msg{
+    color:#f4fdd9;
+    font-size: 7vmin;
+    padding-bottom: 20vmin;
+    font-weight: bold;
+}
+
+.msg-container{
+    height: 100vmin;
+    text-align: center;
+    padding-top: 50vmin;
+}
+.hide{
+    display: none;
+}
